# AutoResearchClaw

./: .clasp.example.json  .clasp.json  .gitignore  .ignore  README.md
docs/: ec2-cicd.md  jiphyeonjeon-editor-professor-agents.md
runtime/: README.md  agents.yaml  jobs.yaml  traveler-scoring.json  traveler-scout-topics.json
scripts/: bootstrap-interest-notes.py  check-hermes-bridge-smoke.sh  check-hermes-ops.sh  check-openclaw-ops.sh  check-prompt-governance.py  check-runtime-manifests.py  daily-jiphyeonjeon-briefing.sh  deploy-discord-openclaw-bridge.sh  deploy-hermes-workspace.sh  deploy-openclaw-workspace.sh  install-hermes-auxiliary-bot-services.sh  install-hermes-bridge-canary-service.sh  jiphyeonjeon_content_identity.py  (+14 more)
skills/discord-openclaw-bridge/project/: .env.example  pyproject.toml
skills/discord-openclaw-bridge/project/scripts/: install-miner.sh  install-reporter.sh  install-traveler.sh  install.sh  invite-guard-url.sh  invite-miner-url.sh  invite-reporter-url.sh  invite-traveler-url.sh  invite-url.sh  post-blog.sh  post-briefing.sh  post-card-news.sh  post-newsletter-briefing.sh  restart-miner.sh  restart.sh  run-daily-jiphyeonjeon-briefing.sh  run-miner-seeds.sh  run-newsletter-archive-and-cardnews.sh  run-traveler-collection-report.sh  status.sh
skills/discord-openclaw-bridge/project/src/discord_openclaw_bridge/: __init__.py  _shared.py  article_metadata.py  audit_ops.py  blog_publisher.py  bot.py  briefing.py  config.py  guard_ops.py  miner.py  miner_bot.py  newsletter_candidate_orchestrator.py  openclaw.py  openclaw_gateway.py  post_briefing.py  post_card_news.py  post_miner_seeds_report.py  post_newsletter.py  post_newsletter_archive.py  post_traveler_collection_report.py  publication_trust_gate.py  reporter_bot.py  review.py  review_cli.py  review_queue_optimizer.py  seeds.py  seeds_cli.py  traveler.py  traveler_bot.py  traveler_evidence.py  traveler_outcomes.py  traveler_review.py  traveler_scout.py  traveler_source_discovery.py  traveler_tuning.py  youtube_video.py
skills/discord-openclaw-bridge/project/tests/: test_article_metadata.py  test_audit_ops_unittest.py  test_blog_publisher.py  test_bot.py  test_briefing.py  test_guard_ops_unittest.py  test_miner.py  test_miner_bot.py  test_miner_review.py  test_newsletter_candidate_orchestrator.py  test_openclaw_client.py  test_openclaw_gateway.py  test_post_card_news.py  test_post_miner_seeds_report.py  test_post_newsletter.py  test_post_newsletter_archive.py  test_post_traveler_collection_report.py  test_publication_trust_gate.py  test_reporter_bot.py  test_review_queue_optimizer.py  test_seeds.py  test_seeds_cli.py  test_traveler.py  test_traveler_bot.py  test_traveler_evidence_deep_research.py  test_traveler_outcomes.py  test_traveler_review.py  test_traveler_scoring_characterization.py  test_traveler_scoring_config.py  test_traveler_scout.py  test_traveler_source_discovery.py  test_traveler_tuning.py  test_youtube_video.py
skills/paper-recommender/project/: config.example.yaml  pyproject.toml
skills/paper-recommender/project/scripts/: run_daily.sh  run_daily_research.sh  run_weekly.sh
skills/paper-recommender/project/src/paper_recommender/: __main__.py  auth.py  candidates.py  cli.py  cluster_select.py  clustering.py  config.py  daily_note.py  daily_research.py  deep_bridge.py  jiphyeonjeon.py  jiphyeonjeon_auth.py  llm.py  obsidian.py  openclaw_gateway.py  persistence.py  pipeline.py  profile.py  rerank.py  signals.py  soul.py  state.py  trend_queries.py  trend_report.py  weekly.py  weekly_obsidian.py
skills/paper-recommender/project/src/paper_recommender/sources/: __init__.py  _util.py  arxiv.py  canonical.py  google_newsletters.py  hackernews.py  huggingface_papers.py  jiphyeonjeon.py  manual_links.py  rss.py
skills/paper-recommender/project/tests/: test_autoresearch_pdf_fetch.py  test_canonical.py  test_cli_daily_research.py  test_cluster_select.py  test_clustering.py  test_config_daily_research.py  test_daily_note.py  test_daily_research.py  test_daily_research_merge.py  test_deep_bridge.py  test_gmail_newsletter_briefing.py  test_jiphyeonjeon_auth.py  test_jiphyeonjeon_migration.py  test_llm_gateway.py  test_miner_approved_archive_ingest.py  test_newsletter_ingest.py  test_persistence.py  test_rerank_and_artifacts.py  test_source_arxiv.py  test_source_google_newsletters.py  test_source_hackernews.py  test_source_huggingface_papers.py  test_source_jiphyeonjeon_adapter.py  test_source_manual_links.py  test_source_rss.py  test_sources_protocol.py  test_sources_util.py  test_state_deep_seen.py  test_weekly_soul_governance.py
(+125 files in other folders)
