[project]
name = "discord-openclaw-bridge"
version = "0.1.0"
description = "Discord slash-command bridge to a loopback OpenClaw OpenAI-compatible gateway"
requires-python = ">=3.11"
dependencies = [
  "discord.py>=2.4,<3",
  "httpx>=0.27,<1",
]

[project.scripts]
discord-openclaw-bridge = "discord_openclaw_bridge.bot:main"
discord-jiphyeonjeon-miner = "discord_openclaw_bridge.miner_bot:main"
discord-jiphyeonjeon-miner-review = "discord_openclaw_bridge.review_cli:main"
discord-openclaw-post-briefing = "discord_openclaw_bridge.post_briefing:main"
discord-openclaw-post-newsletter = "discord_openclaw_bridge.post_newsletter:main"
discord-openclaw-post-card-news = "discord_openclaw_bridge.post_card_news:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
