[project]
name = "discord-openclaw-bridge"
version = "0.1.0"
description = "Discord slash-command bridge to a loopback OpenClaw OpenAI-compatible gateway"
requires-python = ">=3.11"
dependencies = [
  "discord.py>=2.4,<3",
  "httpx>=0.27,<1",
]

[project.optional-dependencies]
test = [
  "pytest>=8,<10",
]

[project.scripts]
discord-openclaw-bridge = "discord_openclaw_bridge.bot:main"
discord-jiphyeonjeon-miner = "discord_openclaw_bridge.miner_bot:main"
discord-jiphyeonjeon-traveler = "discord_openclaw_bridge.traveler_bot:main"
discord-jiphyeonjeon-miner-review = "discord_openclaw_bridge.review_cli:main"
discord-openclaw-post-briefing = "discord_openclaw_bridge.post_briefing:main"
discord-openclaw-post-newsletter = "discord_openclaw_bridge.post_newsletter:main"
discord-openclaw-post-card-news = "discord_openclaw_bridge.post_card_news:main"
discord-openclaw-post-newsletter-archive = "discord_openclaw_bridge.post_newsletter_archive:main"
discord-openclaw-miner-seeds = "discord_openclaw_bridge.seeds_cli:main"
discord-openclaw-post-miner-seeds-report = "discord_openclaw_bridge.post_miner_seeds_report:main"
discord-openclaw-post-traveler-collection-report = "discord_openclaw_bridge.post_traveler_collection_report:main"
discord-openclaw-traveler-discover-sources = "discord_openclaw_bridge.traveler_source_discovery:main"
discord-openclaw-traveler-scout = "discord_openclaw_bridge.traveler_scout:main"
discord-openclaw-guard-ops-digest = "discord_openclaw_bridge.guard_ops:main"
discord-openclaw-review-queue-optimizer = "discord_openclaw_bridge.review_queue_optimizer:main"
discord-openclaw-newsletter-candidate-orchestrator = "discord_openclaw_bridge.newsletter_candidate_orchestrator:main"
discord-openclaw-audit-team = "discord_openclaw_bridge.audit_ops:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
